# repo

./: .gitignore  Cargo.toml  Makefile  README.md  biome.json  biome.jsonc  bun.lockb  package.json  repo_abbreviations.fish  repo_completions_and_abbreviations.fish  rust-toolchain.toml  tsconfig.json
.config/: readme-cli-help.json  repo.json
.github/workflows/: CI.yaml  build-release-binaries.yaml  test-published-packages.yaml
script/: common.ts  postVersion.ts  publish-npm.ts  release-npm.ts  write-schemas-and-types.ts
src/: args.rs  ci.rs  ecosystem.rs  main.rs  publish.rs  setup.rs  version.rs
src/commands/: boilerplate.rs  ci.rs  dependencies.rs  mod.rs  print_schema.rs  publish.rs  setup.rs  vcs.rs  version.rs  workspace.rs
src/common/: args.rs  command.rs  commit_wrapped_operation.rs  config.rs  debug.rs  ecosystem.rs  inference.rs  mod.rs  package_manager.rs  template_file.rs  vcs.rs  workspace.rs
src/js/@lgarron-bin/: .gitignore
src/js/@lgarron-bin/repo/: repo.js
src/js/@lgarron-repo/repo/: architectures.js  package.json  repo.js  repo.ts
src/js/@lgarron-repo/repo-aarch64-apple-darwin/: package.json
src/js/@lgarron-repo/repo-x86_64-apple-darwin/: package.json
src/js/@lgarron-repo/repo-x86_64-pc-windows/: package.json
src/js/@lgarron-repo/repo-x86_64-unknown-linux-gnu/: package.json
src/templates/: biome.json  tsconfig.es2022.no-dom.json  tsconfig.es2024.json  tsconfig.es2024.no-dom.json
src/templates/.config/: readme-cli-help.json
src/templates/.github/workflows/: CI.yaml
src/templates/.woodpecker/: CI.yaml
src/templates/workaround-indirection-folder/: README.md
