[package]
name = "repo"
description = "An opinionated tool for repo management."
version = "0.6.5"
edition = "2021"
license = "MIT"
exclude = ["src/templates/node_modules"]

[dependencies]
cargo_metadata = "0.18.1"
clap = { version = "4.5.21", features = ["derive"] }
clap_complete = "4.5.38"
edit = "0.1.5"
opener = { version = "0.7.2", features = ["reveal"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
url = "2.5.4"
