[package]
name = "repo"
description = "An opinionated tool for repo management."
version = "0.13.18"
edition = "2021"
license = "MIT"
exclude = [
  "src/templates/node_modules",
  "src/templates/workaround-indirection-folder/node_modules",
]
build = "build.rs"
repository = "https://github.com/lgarron/repo"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }.v{ version }.{ target }"
pkg-fmt = "bin"

[dependencies]
cargo_metadata = "0.18.1"
clap = { version = "4.5.21", features = ["derive"] }
clap_complete = "4.5.38"
colored = "3.0.0"
edit-without-waiting = "0.2.0"
opener = { version = "0.7.2", features = ["reveal"] }
printable-shell-command = "0.2.4"
regex_static = "0.1.1"
schemars = "1.1.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
shadow-rs = { version = "1.2.0", default-features = false }
url = "2.5.4"

[build-dependencies]
shadow-rs = "1.2.0"

# Optimize for release binary size.
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[dev-dependencies]
schemars = "1.1.0"
